[package]
name = "salloc-nb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
toml = "0.7.3"
